# yanyu_git

./: README.md  build.sh  committest.txt
install/: local_setup.sh  setup.sh
install/subscribe_and_publish/lib/subscribe_and_publish/: publisher
install/subscribe_and_publish/share/subscribe_and_publish/: local_setup.dsv  package.dsv  package.sh
log/: latest_build
src/subscribe_and_publish/: CMakeLists.txt
src/subscribe_and_publish/include/: xingmaicx_rostopic.h  xingmaicx_rostopic_log.h
src/subscribe_and_publish/src/: publisher.cpp  subscribe1.cpp  xingmaicx_rostopic.cpp  xingmaicx_rostopic_log.cpp
